--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
                 <li>
                     <a href="#lightbox5">
-                        <div class="sprite" id="Argentina"></div>
+                        <div class="sprite" id="Arentina"></div>
                         <div class="red_bumper"></div>
-                        <h5>Argentina</h5>
+                        <h5>Arentina</h5>
                     </a>
-                    <!-- <img src="images/hulk.jpeg" alt="hulk"> -->
+                    <!-- <img src="images/widow.jpeg" alt="black widow"> -->
                 </li>
 
                 <li>
